--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </tr>
         <tr>
             <td>Cultural Background</td>
-            <td>I am a Mexican surrounded by Mexican traditions and celebrations</td>
+            <td>I am a Mexican surrounded by my culture's traditions and celebrations</td>
         </tr>
         <tr>
             <td>Significant Life Event</td>
@@ -39,6 +39,8 @@
         </tr>
         </table>
         <br>
+        <br>
+            <iframe src="https://3dwarehouse.sketchup.com/embed/25f2af74-521b-4d84-92a9-1e2f78e34744?token=7Hhu8xWBubo=&binaryName=s21" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
         <br>
         <br>
         <table>
